added pics to states tab

--- a/static/style.css
+++ b/static/style.css
@@ -143,5 +143,5 @@ img {vertical-align: middle;}
   #footer {
 	color: #37423b;
 	font-size: 14px;
-	background: #eef0ef;
+	background: #b3b3b3;
   }
